refactor: List.of 적용